--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "http-status-codes": "^2.2.0",
+    "socket.io": "^4.7.1",
     "winston": "^3.9.0"
   },
   "devDependencies": {
